Change pom.xml